Fixed a bug with labels on box plot not showing

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -62,6 +62,7 @@ a {
 
 .axis {
   font: 12px sans-serif;
+
 }
 
 .axis path,
@@ -75,6 +76,10 @@ a {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
+}
+
+.dot {
+  fill: red;
 }
 
 
